modified the html and css

--- a/resume_sivashanmugam.html
+++ b/resume_sivashanmugam.html
@@ -13,7 +13,7 @@
          <header id="title">
             <h1>Sivashanmugam Kannan</h1>
             <span class="subtitle">Full-Stack Software Developer</span>
-            <p class="aboutme">Software Developer with 2.5 years of work experience with a Bachelor of Technology degree in Computer Science and Enginnering primarily working as Web Developer with Love</p>
+            <p class="aboutme">Software Developer with 2.5 years of work experience with a Bachelor of Technology degree in Computer Science and Engineering primarily working as Web Developer with Love</p>
          </header>
          <div class="contact-details text-right">
             <ul class="no-margin">
@@ -225,9 +225,9 @@
                        <div>
                           <ul>
                              <li>Created web server using NodeJS, mongoDB with Google auth</li>
-                             <li>Developed highly scalable, high performence, loosely coupled modules with single page UI for the portal using AngularJS</li>
+                             <li>Developed highly scalable, high performance, loosely coupled modules with single page UI for the portal using AngularJS</li>
                              <li>Integrated advanced text editors and 3rd party modules in the Angular application</li>
-                             <li>For access control, defined roles and permissions for each users</li>
+                             <li>For access control, defined roles and permissions for each user</li>
                              <li>Designed schema for all the collection</li>
                           </ul>
                        </div>
@@ -277,8 +277,7 @@
            </div>
       </section>
       <!-- Education -->
-      <section class="main">
-         
+      <section class="main" style="position: relative; height:7in">
           <div class="container">
               <h4><i class="fa fa-folder-open"></i> Selected Personal Projects</h4>
               <section class="project">
@@ -294,7 +293,7 @@
                        <div>
                           <ul class="no-margin">
                              <li>Created Webcrawler using NodeJS which gets the details of people pages</li>
-                             <li>Extracted actual and meta data through DOM parsing and regular expressions and stored the details in mongoDB</li>
+                             <li>Extracted actual and metadata through DOM parsing and regular expressions and stored the details in mongoDB</li>
                              <li>Analysed data and fixed the missed data in wikimedia API</li>
                              <li>Server handles 200 concurrent request at a time and more than 30 lack web pages analysed </li>
                           </ul>
@@ -313,14 +312,17 @@
                        <div>
                           <ul class="no-margin">
                              <li>Created web application which authorizes users through facebook and gathers their images</li>
-                             <li>Process the images with existing templates results them with a option to share in facebook</li>
-                             <li>Server deployed in amazon EC2 and Integrated amazon S3 storage, Google analytics API and Facebook advertisement</li>
+                             <li>Process the images with existing templates results them with a option to share on facebook</li>
+                             <li>Server deployed on amazon EC2 and Integrated amazon S3 storage, Google analytics API and Facebook advertisement</li>
                           </ul>
                        </div>
                     </div>
                  </section>
               </section>
            </div>
+           <footer>
+              <span>custom designed resume <i class="fa fa-github"></i><a href="https://github.com/shivashanmugam/resume-template"> /shivashanmugam</span>&nbsp;</span>
+            </footer>
       </section>
    </body>
 </html>
