--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
          <div class="contact-details text-right">
             <ul class="no-margin">
                <li>sivashanmugam4444@gmail.com <i class="fa fa-envelope"></i> </li>
-               <!-- <li>shivashanmugam <i class="fa fa-github"></i> </li> -->
+               <li>shivashanmugam <i class="fa fa-github"></i> </li>
                <li> +91 8508874861 <i class="fa fa-phone"></i></li>
-               <!-- <li> mywebsite.com <i class="fa fa-globe"></i></li> -->
+               <li>stackoverflow.com/users/2264606/<i class="fa-stack-overflow"></i></li>
             </ul>
          </div>
       </section>
