updated the resume

--- a/index.html
+++ b/index.html
@@ -13,51 +13,42 @@
          <header id="title">
             <h1>Sivashanmugam Kannan</h1>
             <span class="subtitle">Full-Stack Software Developer</span>
-            <p class="aboutme">Software Developer with 2.5 years of work experience with a Bachelor of Technology degree in Computer Science and Engineering primarily working as Web Developer with Love</p>
+            <p class="aboutme">Software Developer with 3 years of work experience with a Bachelor of Technology degree in Computer Science and Engineering primarily working as Web Developer</p>
          </header>
          <div class="contact-details text-right">
             <ul class="no-margin">
                <li>sivashanmugam4444@gmail.com <i class="fa fa-envelope"></i> </li>
-               <li>shivashanmugam <i class="fa fa-github"></i> </li>
+               <li>github.com/shivashanmugam <i class="fa fa-github"></i> </li>
                <li> +91 8508874861 <i class="fa fa-phone"></i></li>
-               <li>stackoverflow.com/users/2264606/<i class="fa-stack-overflow"></i></li>
+               <li>stackoverflow.com/users/2264606 <i class="fa fa-stack-overflow"></i></li>
             </ul>
          </div>
       </section>
       <section class="main">
          <div class="container tech-skill">
-            <h4><i class="fa fa-code"></i>Technology Experience</h4>
+            <h4><i class="fa fa-code"></i> Programming Experience</h4>
             <ul class="no-margin">
                <li>
                   Strong knowledge in Core Concepts of
                   <ul>
-                     <li>Javascript</li>
+                     <li>Object Oriented JavaScript</li>
                      <li>NodeJS</li>
-                     <li>mongoDB</li>
-                  </ul>
-               </li>
-               <li>
-                  Strong Understanding in Asynchronous
-                  <ul>
-                     <li>Event handling mechanisms</li>
-                     <li>IO operations such as HTTP, DB requests</li>
-                     <li>Data processing mechanisms</li>
+                     <li>AngularJS</li>
                   </ul>
                </li>
                <li>
                   Good Experience in
                   <ul>
+                     <li>Developing Scalable Javascript plugis and libraries with AngularJS and Object Oriented Javascript</li>
+                     <li>Writing Build configurations</li>
+                     <li>Tools and libraries familier with: Grunt, SASS, express, socket.io, mongoose</li>
                      <li>Server development with NodeJS, mongoDB</li>
-                     <li>Developing single page applications with AngularJS</li>
-                     <li>Integrating 3rd party API, cloud storages</li>
-                     <li>Front end designing with bootstrap, HTML5, CSS3</li>
-                     <li>Deploying in remote VM and open stack containers</li>
+                     <li>Developing Responsive User Interfaces</li>
                   </ul>
                </li>
                <li></li>
             </ul>
          </div>
-         <!-- Newly added -->
 
          <div class="container">
             <h4><i class="fa fa-graduation-cap"></i> Education</h4>
@@ -122,8 +113,8 @@
          <div class="container">
             <h4><i class="fa fa-wrench"></i> Skills</h4>
             <button>Javascript</button>
-            <button>NodeJS</button>
             <button>AngularJS</button>
+            <button>NodeJS</button>
             <button>mongoDB</button>
          </div>
          <div class="container">
@@ -142,9 +133,9 @@
                      </header>
                      <div>
                         <ul>
-                           <li>Designed and developed content management system and maintaining it</li>
-                           <li>Owner of multiple educational content rendering engines and plugins for mobile and web</li>
-                           <li>Created automation to support the educational content in various indian languages</li>
+                           <li>Responsible for developing extendable and scalable angular application for our product's CMS</li>
+                           <li>Created JavaScript plugins for educational content in our product platform</li>
+                           <li>Developed automation process to translate content plugins to locale languages and successfully integrated into to Maharashtra school text books</li>
                         </ul>
                      </div>
                   </div>
@@ -162,9 +153,8 @@
                     </header>
                     <div>
                       <ul>
-                          <li>As a part of team of 5 we delivered successfully multiple projects for Japanese clients with highly constrained timeline</li>
-                          <li>Designed and developed UI for Electricity management portal</li>
-                          <li>Full Application support and for a existing Human Resource Management System for a Japanese client</li>
+                          <li>As a part of team of 5 we delivered successfully multiple projects for Japanese clients with highly constrained timeline with efficiency</li>
+                          <li>Responsible for Design and development of multiple front end applications</li>
                       </ul>
                     </div>
                   </div>
@@ -182,10 +172,9 @@
                     </header>
                     <div>
                       <ul>
-                          <li>As Trainee and being a part of team of 7, helped the team on developing and testing important modules and also helped company on individual projects</li>
-                          <li>Created a prototype for Internal communication portal</li>
-                          <li>Created portfolio for offshore team</li>
-                          <li>Helped team in a project to move the DB from SQL to mongoDB</li>
+                          <li>As Trainee and being a part of team of 7, helped the team on new product features and functionality in our finance platform</li>
+                          <li>Created a prototype for new features and tools</li>
+                          <li>Helped the team on datbase migration from SQL to mongoDB</li>
                       </ul>
                     </div>
                 </div>
@@ -224,11 +213,13 @@
                        </header>
                        <div>
                           <ul>
-                             <li>Created web server using NodeJS, mongoDB with Google auth</li>
-                             <li>Developed highly scalable, high performance, loosely coupled modules with single page UI for the portal using AngularJS</li>
-                             <li>Integrated advanced text editors and 3rd party modules in the Angular application</li>
+                             <li>Developed scalable angular applications and configurable and extendable angular directives for our product's CMS platform</li>
+                             <li>Developed javascript highlevel plugins to seamlessly integrate external libraries</li>
+                             <li>Added SASS support for important modules</li>
+                             <li>written grunt configuration for express,  SASS compilation and packaging</li>
+                             <li>Used NodeJS, mongoDB with Google auth in the web server</li>
                              <li>For access control, defined roles and permissions for each user</li>
-                             <li>Designed schema for all the collection</li>
+                             <li>Designed schema for all the collection in mongoDB</li>
                           </ul>
                        </div>
                     </div>
@@ -246,8 +237,7 @@
                        </header>
                        <div>
                           <ul>
-                             <li>Created a peer to peer and group communication tool with NodeJS and socket.io for the internal employees with encryption, authentication Web UI</li>
-                             <li>Creating and managing users, user group models and applying CRUD operations for the models</li>
+                             <li>Created a minimal working prototype of peer to peer and group communication tool using NodeJS and socket.io for the internal employees with encryption, authentication</li>
                              <li>Testing the authentication middleware by running automated test cases in communication APIs</li>
                           </ul>
                        </div>
@@ -260,15 +250,14 @@
                     <div class="decorator"></div>
                     <div class="details">
                        <header>
-                          <h3>Educational Content Rendering Plugins</h3>
+                          <h3>Educational plugins with translation support</h3>
                           <span class="place"><i class="fa fa-briefcase"></i> &nbsp;EDreams</span>
                           <span class="location">Bengaluru</span>
                        </header>
                        <div>
                           <ul>
                              <li>Using javaScript created educational plugins for web and mobile</li>
-                             <li>Written automations to enable the  educational content to support all Indian languages</li>
-                             <li>Enabled manual translation support for the content editors using helper tools such as Google translation API etc.</li>
+                             <li>Written automations to enable translation of content plugins in various Indian languages and it has been widely adapted to different state government school books successfully</li>
                           </ul>
                        </div>
                     </div>
@@ -280,6 +269,26 @@
       <section class="main" style="position: relative; height:7in">
           <div class="container">
               <h4><i class="fa fa-folder-open"></i> Selected Personal Projects</h4>
+              <section class="project">
+                <section class="blocks">
+                   <div class="date">
+                      <span>2017</span><span>2018</span>
+                   </div>
+                   <div class="decorator"></div>
+                   <div class="details">
+                      <header>
+                         <h3>Custom AngularJS directive for table generator</h3>
+                      </header>
+                      <div>
+                         <ul class="no-margin">
+                            <li>Created a angularJS custom directive for generating high configurable HTML table</li>
+                            <li>Implemented sort, column search, table search, filter, pagination, selecting rows,row action, table actions, custom coloring for selected rows and specifc columns</li>
+                            <li>Written extensive documentation for configuration, examples and featured on github</li>
+                         </ul>
+                      </div>
+                   </div>
+                </section>
+             
               <section class="project">
                  <section class="blocks">
                     <div class="date">
@@ -293,9 +302,9 @@
                        <div>
                           <ul class="no-margin">
                              <li>Created Webcrawler using NodeJS which gets the details of people pages</li>
-                             <li>Extracted actual and metadata through DOM parsing and regular expressions and stored the details in mongoDB</li>
+                             <li>Extracted data through DOM parsing and regular expressions and stored the details in mongoDB</li>
                              <li>Analysed data and fixed the missed data in wikimedia API</li>
-                             <li>Server handles 200 concurrent request at a time and more than 30 lack web pages analysed </li>
+                             <li>Server handles 200 concurrent http request and details retrived from more than 30 lack web pages</li>
                           </ul>
                        </div>
                     </div>
@@ -311,9 +320,9 @@
                        </header>
                        <div>
                           <ul class="no-margin">
-                             <li>Created web application which authorizes users through facebook and gathers their images</li>
-                             <li>Process the images with existing templates results them with a option to share on facebook</li>
-                             <li>Server deployed on amazon EC2 and Integrated amazon S3 storage, Google analytics API and Facebook advertisement</li>
+                             <li>Created web application which authorizes users through facebook</li>
+                             <li>Process authorized images with existing templates using imagemagick nodeJS library</li>
+                             <li>Deployed server on amazon EC2, Integrated amazon S3 storage, Google analytics API and Facebook advertisement</li>
                           </ul>
                        </div>
                     </div>
