--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <li>
                   Good Experience in
                   <ul>
-                     <li>Developing Scalable Javascript plugis and libraries with AngularJS and Object Oriented Javascript</li>
+                     <li>Developing Scalable Javascript plugis and libraries in AngularJS and Object Oriented Javascript</li>
                      <li>Writing Build configurations</li>
                      <li>Tools and libraries familier with: Grunt, SASS, express, socket.io, mongoose</li>
                      <li>Server development with NodeJS, mongoDB</li>
@@ -216,7 +216,7 @@
                              <li>Developed scalable angular applications and configurable and extendable angular directives for our product's CMS platform</li>
                              <li>Developed javascript highlevel plugins to seamlessly integrate external libraries</li>
                              <li>Added SASS support for important modules</li>
-                             <li>written grunt configuration for express,  SASS compilation and packaging</li>
+                             <li>Written grunt configuration for express,  SASS compilation and packaging</li>
                              <li>Used NodeJS, mongoDB with Google auth in the web server</li>
                              <li>For access control, defined roles and permissions for each user</li>
                              <li>Designed schema for all the collection in mongoDB</li>
