--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                           <li>As Trainee and being a part of team of 7, helped the team on new product features and functionality in our finance platform</li>
                           <li>Created a prototype for new features and tools</li>
                           <li>Helped the team on datbase migration from SQL to mongoDB</li>
+                          <li>Created a internal communication tools With NodeJS and socket.io</li>
                       </ul>
                     </div>
                 </div>
